<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{73c2ae93-5fbd-4731-acda-a3b905b37dd3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	GroenR : BOOL; 
	GeelR : BOOL;
	RoodR: BOOL;
	GroenL : BOOL;
	GeelL : BOOL;
	RoodL: BOOL;
	
	LichtStatusR: INT := 0; // 0 = Rood, 1 = Groen, 2 = Oranje
	LichtStatusL: INT := 0; // 0 = Rood, 1 = Groen, 2 = Oranje
	
	AutoR : BOOL; // Auto komt van Rechts
	AutoL : BOOL; // Auto komt van Links
	
	TijdGroen : TIME := T#5S; // de tijden zet ik hier neer zodat ik die makkelijk kan aanpassen
	TijdGeel : TIME := T#2S;
	TijdRood : TIME := T#5S;
	
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>